fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ p {
 .about-me-container,
 .tech-stack-container,
 .projects-container {
-    margin: 5rem 0;
+    margin: 10rem 0;
 }
 
 .about-me-content-container {
@@ -90,10 +90,10 @@ p {
     align-items: center;
     text-align: center;
     width: 90%;
-    margin: auto;
+    margin: 3rem auto;
+    gap: 2rem;
 
     p {
-        line-height: 1;
         font-size: 1.8rem;
     }
 }
